// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With billingPeriod Annual renders correctly 1`] = `"We will attempt to take payment of £0, on the first day of March every year, from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of every month
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of every month
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With billingPeriod Monthly renders correctly 1`] = `"We will attempt to take payment of £0, on the first day of every month, from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of every month
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for Contribution With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    We will attempt to take payment of 
    £0
    ,
     
    on the first day of every month
    , from now until you cancel your payment. Payments may take up to 6 days to be recorded in your bank account. You can change how much you give or cancel your payment at any time.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for DigitalSubscription With billingPeriod Monthly renders correctly 1`] = `""`;

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With billingPeriod Annual renders correctly 1`] = `"The Guardian Ad-Lite subscription will auto-renew each year. You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With billingPeriod Monthly renders correctly 1`] = `"The Guardian Ad-Lite subscription will auto-renew each month. You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for GuardianAdLite With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    Guardian Ad-Lite
     subscription
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for OneTimeContribution With billingPeriod Monthly renders correctly 1`] = `""`;

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With billingPeriod Annual renders correctly 1`] = `"The All-access digital subscription and any contribution will auto-renew each year. You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    year
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    year
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With billingPeriod Monthly renders correctly 1`] = `"The All-access digital subscription and any contribution will auto-renew each month. You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    month
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for SupporterPlus With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    All-access digital
     subscription and any contribution will auto-renew each 
    month
    . You will be charged the subscription and contribution amounts using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With billingPeriod Annual renders correctly 1`] = `"The Digital + print subscriptions will auto-renew each year. You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With contributionType ANNUALY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    year
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)

<<<<<<< HEAD
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With billingPeriod Monthly renders correctly 1`] = `"The Digital + print subscriptions will auto-renew each month. You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel."`;
||||||| parent of 596e81dd7 (Update snapshots with new emotion generated css class)
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-mlt1i5-SummaryTsAndCs"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
=======
exports[`Summary Ts&Cs Snapshot comparison summaryTs&Cs for TierThree With contributionType MONTHLY renders correctly 1`] = `
<div>
  <div
    class="css-1u741xj"
  >
    The 
    Digital + print
     subscription
    s
     will auto-renew each
     
    month
    . You will be charged the subscription amount using your chosen payment method at each renewal, at the rate then in effect, unless you cancel.
  </div>
</div>
`;
>>>>>>> 596e81dd7 (Update snapshots with new emotion generated css class)
